<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rcl_logging_implementation</name>
  <version>3.4.1</version>
  <description>
    Provides the ability to load logging implementations at runtime.
    This package acts as an abstraction layer between rcl and the actual
    logging implementation (e.g., spdlog, noop, or custom implementations).
  </description>

  <maintainer email="tomoya.fujita825@gmail.com">Tomoya Fujita</maintainer>

  <license>Apache License 2.0</license>

  <author email="tomoya.fujita825@gmail.com">Tomoya Fujita</author>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcl_logging_interface</depend>
  <depend>rcpputils</depend>
  <depend>rcutils</depend>

  <!-- Default logging implementation -->
  <exec_depend>rcl_logging_spdlog</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>rcl_logging_noop</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
